Depression Recovery Focus tree and decision framework
Will finish tomorrow with it all

--- a/bicemodded/localisation/english/decisions_TW_l_english.yml
+++ b/bicemodded/localisation/english/decisions_TW_l_english.yml
@@ -393,6 +393,9 @@
  USA_support_sov_desc:0 "Determined to keep the United States out of the war while helping those allies already mired in it, congress approved to send $1 billion in free credit to the Soviet Union on October 30th 1941."
  enforce_embargo_on_japan_tt:0 "§GGive [JAP.GetNameDef] a worse§! §YResource War§! §Gpenalty!§!"
  enforce_embargo_on_japan_if_eng_and_usa_tt:0 "§GGive [JAP.GetNameDef] a worse§! §YResource War§! §Gpenalty when both Britain and USA has embargoed!§!"
+ USA_Depression_Recovery:0 "Depression Recovery"
+ USA_CCC_mission_1:0 "Civilian Conservation Corps"
+ USA_CCC_mission_1_desc:0 "Civilian Conservation Corps"
  ###USA#
 
 
