--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -129,8 +129,8 @@
  HUN_synthetic_research_desc:0 "Developing Synthetic oil will put us less at risk of losing our Oil supply and will make us self autonomous"
  
  
- USA_erf:0 "Emergency Relief Appropriation Act"
- USA_erf_desc:0 "The 1935 Relief Appropriation Act was passed as part of FDR's Second New Deal.  It was the largest public-assistance relief program in American history, employing a total of 3.5 million people, and was the single largest accumulation of debt as well, a total of 4.8 billion USD.  FDR hoped this would end the Great Depression once and for all!  He was wrong, and this was generally unsuccessful."
+ USA_3LA:0 "Establish the 3 Letter Agencies"
+ USA_3LA_desc:0 "The 3 Letter Agencies will be part of the Presidents new plan to address the Depression.  These will cover all parts of life, and hopefully address the problems American people are facing with the Great Depression."
  USA_public_works:0 "Public Works Administration"
  USA_public_works_desc:0 "The PWA was created by the National Industrial Recovery Act in response to the Great Depression.  It built infrastructure such as The Hoover Dam, a bridge connecting Key West, Florida, to the mainland, and a 1.5 mile long tunnel under the Hudson River in New York City, rivaling the WPA in its endeavor to make the best infrastructure in America.  However, the PWA is better because it later built the Aircraft Carriers Yorktown and Enterprise, which sunk 4 Japanese Carriers at the Battle of Midway.  Take that WPA!"
  USA_national_youth:0 "National Youth Administration"
@@ -2315,14 +2315,15 @@ USA_naval_buildup:0 "Accelerate Naval Buildup"
 USA_naval_buildup_desc:0 "Our Navy needs the upmost prioritization, as in order to defeat the Japanese we need total Naval Supremacy."
 USA_help_raj:0 "Support Raj"
 USA_help_raj_desc:0 "The British Raj is in need of support and the only country capable of helping them is the Home of the Free"
+USA_help_raj_tt:0 "§YIf the British Raj has a Famine, the US of A can help keep them from going hungry!§!\n"
 UNLOCK_DIVISION_TEMPLATE_USA_LOUI:0 "Unlocks one §YInfantry§! template and one heavy §YSemi-Motorized§! template."
 EAGLE_SQUADRON_TT:0 "Two hundred of our most daring pilots will be sent as volunteers to fly for the RAF in §Y1940 Fighters§W and protect the skies above the British Isles."
 USA_pacific_basing:0 "Pacific Basing"
 USA_pacific_basing_desc:0 "To project our force in the west pacific we need large naval bases that can support our main task forces!"
 USA_ccc:0 "Civilian Conservation Corps"
 USA_ccc_desc:0 "Unemployed young Americans need a reason to get up every morning. The Civilian Conservation Corps will enlist young men to construct the infrastructure the nation needs."
-USA_finish_hoover_dam:0 "Finish the Hoover Dam"
-USA_finish_hoover_dam_desc:0 "The Hoover Damn was a 5 year construction project across the Colorado River to provide power for ~1.3 million homes in the Nevada-Arizona area.  The construction process involved 4 underwater diversion tunnels, 112 deaths, and building 2 clocks that only show the same time for 6 months of the year.  From this, we can surely learn a thing or two about better construction techniques!"
+USA_NIRA:0 "National Industrial Recovery Act"
+USA_NIRA_desc:0 "The Hoover Damn was a 5 year construction project across the Colorado River to provide power for ~1.3 million homes in the Nevada-Arizona area.  The construction process involved 4 underwater diversion tunnels, 112 deaths, and building 2 clocks that only show the same time for 6 months of the year.  From this, we can surely learn a thing or two about better construction techniques!"
 USA_help_farmers:0 "Resettlement Administration"
 USA_help_farmers_desc:0 "We must create the Resettlement administration to relocate struggling rural and urban families to communities planned directly by us."
 USA_fsa:0 "Farm Security Administration"
@@ -2630,7 +2631,7 @@ USA_rural_electrification_act:0 "Rural Electrification Act"
 USA_rural_electrification_act_desc:0 "The Rural Electrification Act provided federal loans for the purpose of bringing electricity to rural areas, an idea before considered unfeasible due to the range of powerlines only being 4 miles.  With these loans, that distance was increased to 40 miles, allowing thousands of homes to see the light quite literally!"
 USA_tennessee_valley_authority:0 "Tennessee Valley Authority"
 USA_tennessee_valley_authority_desc:0 "The TVA was established to provide infrastructure to an area that was largely neglected due to the Great Depression.  This included the constuction of the first and largest federal hydropower agencies in the country, which was later used to produce ~5 million tons of aluminum and many of the components for the Manhatten Project for the war effort."
-USA_aaa:0 "Rural Electrification Administration"
+USA_aaa:0 "Agricultural Adjustments Act"
 USA_aaa_desc:0 "We need to create this agency to promote Rural Electrification, in Europe Germany and France have over 90% farms with electricity, we're falling behind!"
 USA_beast_america:0 "Industrial Mobilization"
 USA_beast_america_desc:0 "We must defeat the enemy, no matter the cost, Total Industrial Mobilization!"
