--- a/bicemodded/localisation/english/dod_focus_l_english.yml
+++ b/bicemodded/localisation/english/dod_focus_l_english.yml
@@ -391,7 +391,7 @@
  ROM_modern_at_guns:0 "Modern AT Guns"
  ROM_modern_at_guns_desc:0 "The age of the tank has arrived, and our infantry require up-to-date means to defend themselves against these steel behemoths."
  ROM_mountain_artillery:0 "Mountain Artillery"
- ROM_mountain_artillery_tech_tt:0 "Enables better §HPack Gun§!\n§HArtillery\n    Mountain§!: Movement: §G+15%§!\n§HAnti-Tank\n    Mountain§!: Movement: §G+15%§!"
+ ROM_mountain_artillery_tech_tt:0 "£unit_category_line_artillery_icon_small Medium to pack size artillery and AT guns including SPG:s, TD:s and AG:s\n    §HMountain§!\n      Attack: §G+10%§!\n      Movement: §G+10%§!\n    §HHills§!\n      Attack: §G+5%§!\n      Movement: §G+5%§!\n"
  ROM_mountain_artillery_desc:0 "Our mountaineers must receive the artillery support they are due, if we are to preserve their excellence. Our artillery must therefore be adapted for mountain use."
  ROM_reserve_divisions:0 "Reserve Divisions"
  ROM_reserve_divisions_desc:0 "Romania is a small nation, and we must allocate appropriate numbers to reserve divisions if our army is to have any staying power in the field."
