fixes to Austria and other minor fixes for portraits

--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -32,6 +32,7 @@
  hawk:0 "Hawk"
  emergency_powers:0 "Emergency Powers"
  technocrat:0 "Technocrat"
+ capitalist:0 "Capitalist"
  national_integralist:0 "National Integralist"
  american_caesar:0 "American Caesar"
  great_architect:0 "Great Architect"
