Everything except localization

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2495,6 +2495,7 @@ USA_pearl_harbor_gambit_2_tt:0 "§RIf the Japanese manage to attack Pearl Harbor
 JAP_pearl_harbor_gambit_tt:0 "§YDuring the Americans 50-day buildup phase, we have the opportunity to launch an attack.§! Should we wait, they will have better prepared defenses! After the gambit is complete they will also have §Greduced§! effect of our attack."
 USA_cancel_pearl_harbor_gambit:0 "Cancel Pearl Harbor Gambit"
 USA_cancel_pearl_harbor_gambit_desc:0 "Stationing a fleet in Pearl Harbor endangers the lives of our sailors. We will not risk them to provoke a war with Japan."
+USA_housing_authority_tooltip:0 "Will add 1 civ every 2 weeks for a total of 14 civs."
 USA_air_war_plans_division:0 "Aeronautical Industry Subsidies"
 USA_air_war_plans_division_desc:0 "Making the right priorities in aviation as well as aircraft production will require long-term planning. The AWPD will ensure we have materiel, organization, and strategic plans."
 USA_air_support:0 "Light Aircraft Production Focus"
