messed up a capitalization

--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1340,10 +1340,11 @@
  USA_CCC_spirit2:0 "Civilian Conservation Corps"
  USA_fsa_idea:0 "Farm Securities Administration"
  USA_aaa_spirit:0 "Agricultural Adjustments Act"
- USA_lib_spirit:0 "Army Library Program"
+ USA_LIB_spirit:0 "Army Library Program"
  USA_NLRA_spirit:0 "National Labor Relations Act"
  USA_AERO_idea:0 "Civil Aeronautics Administration"
  USA_PWA_spirit:0 "Public Works Administration"
+
  south_china_incident:0 "§YSouth China Incident§! Happened"
  new_deal:0 "New Deal"
  new_deal_desc:0 "A set of policies and programs initiated by Franklin D. Roosevelt, a reaction to the hardships suffered during the Great Depression."
