small fixes and changes

--- a/bicemodded/localisation/english/technology_sharing_l_english.yml
+++ b/bicemodded/localisation/english/technology_sharing_l_english.yml
@@ -79,3 +79,13 @@
  BUL_technological_cooperation_program_desc:0 "A Bulgarian initiative promoting technological exchange between faction members."
  SIA_Japanese_research_agreement_name:0 "Siamese-Japanese Research Agreement"
  SIA_Japanese_research_agreement_desc:0 "By sharing discoveries between Siamese and Japanese scientists, it is hoped that Siam can join Japan as an equal one day."
+ ITA_naval_cooperation_program_research_group_name:0 "Italian Maritime Research Cooperation"
+ ITA_naval_cooperation_program_research_group_name:0 "Italy is a one of the five great naval powers and their knowledge will be instrumental to improving our navy."
+ ITA_program_for_scientific_cooperation_name:0 "Italian Scientific Cooperation Program"
+ ITA_program_for_scientific_cooperation_desc:0 "Technological cooperation with Italy will benefit our two nations during warfare."
+ ITA_anglo_italian_tech_sharing_name:0 "Anglo-Italo Research Cooperation"
+ ITA_anglo_italian_tech_sharing_desc:0 "We can use our diplomatic ties with France to exchange technologies between our two nations."
+ ITA_franco_italian_tech_sharing_name:0 "Frano-Italo Research Cooperation"
+ ITA_franco_italian_tech_sharing_desc:0 "We can use our diplomatic ties with France to exchange technologies between our two nations."
+ ITA_italian_hegemony_program_name:0 "Italian Technological Sharing Program"
+ ITA_italian_hegemony_program_desc:0 "We must learn from our overlords."
