--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -783,6 +783,9 @@
  medium_weapons_platform_manufacturer:0 "Medium Platform Designer"
  light_weapons_platform_manufacturer:0 "Light Platform Designer"
  heavy_weapons_platform_manufacturer:0 "Heavy Platform Designer"
+ medium_weapons_platform_manufacturer_2:0 "Medium Platform Designer"
+ light_weapons_platform_manufacturer_2:0 "Light Platform Designer"
+ heavy_weapons_platform_manufacturer_2:0 "Heavy Platform Designer"
  
  
  armored_car_manufacturer:0 "Armored Car Designer"
