jet strat bombers

--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -282,8 +282,8 @@
  GER_jet_fighter_equipment_1_short:0 "Me 262 'Schwalbe'"
  GER_jet_fighter_equipment_2:0 "Horten Ho 229 A-0"
  GER_jet_fighter_equipment_2_short:0 "Ho 229"
- GER_jet_strat_bomber_equipment_1:0 "Horten H.XVIII"
- GER_jet_strat_bomber_equipment_1_short:0 "H.XVIII"
+ GER_jet_strat_bomber_equipment_1:0 "Horten H.XVIII Heavy Jet Bomber"
+ GER_jet_strat_bomber_equipment_1_short:0 "H.XVIII (Hv.J.B)"
  GER_jet_strat_bomber_equipment_1_desc:0 "The experimental flying wing design is the future of stealth bombing planes. Combined with intercontintal range, this bomber can strike even our most distant enemies before they are able to respond."
  GER_rocket_interceptor_equipment_1:0 "Messerschmitt Me 163 'Komet'"
  GER_rocket_interceptor_equipment_1_short:0 "Me 163 'Komet'"
@@ -301,12 +301,12 @@
  SOV_jet_fighter_equipment_2:0 "Mikoyan-Gurevich MiG-15"
  SOV_jet_fighter_equipment_2_short:0 "MiG-15 Jet-Fighter"
  SOV_jet_fighter_equipment_2_desc:0 "The Mikoyan-Gurevich MiG-15 was a jet fighter aircraft developed by Mikoyan-Gurevich for the Soviet Union. The MiG-15 was one of the first successful jet fighters to incorporate swept wings to achieve high transonic speeds. In aerial combat during the Korean War, it outclassed straight-winged jet day fighters, which were largely relegated to ground-attack roles. In response to the MiG-15’s appearance and in order to counter it, the United States Air Force rushed the North American F-86 Sabre to Korea.[1]"
- SOV_jet_tac_bomber_equipment_1:0 "Ilyushin Il-22"
- SOV_jet_tac_bomber_equipment_1_short:0 "Il-22 Jet-Bomber"
- SOV_jet_tac_bomber_equipment_2:0 "Ilyushin Il-28"
- SOV_jet_tac_bomber_equipment_2_short:0 "Il-28 Jet-Bomber"
- SOV_jet_strat_bomber_equipment_1:0 "Tupolev Tu-16"
- SOV_jet_strat_bomber_equipment_1_short:0 "Tu-16 Strategic Jet-Bomber"
+ SOV_jet_tac_bomber_equipment_1:0 "Ilyushin Il-22 Jet-Bomber"
+ SOV_jet_tac_bomber_equipment_1_short:0 "Il-22 (J.B)"
+ SOV_jet_tac_bomber_equipment_2:0 "Ilyushin Il-28 Jet-Bomber"
+ SOV_jet_tac_bomber_equipment_2_short:0 "Il-28 (J.B)"
+ SOV_jet_strat_bomber_equipment_1:0 "Tupolev Tu-16 Heavy Jet Bomber"
+ SOV_jet_strat_bomber_equipment_1_short:0 "Tu-16 (Hv.J.B)"
  HOL_fighter_equipment_0:0 "Fokker D.XVII"
  HOL_fighter_equipment_0_short:0 "D.XVII"
  HOL_fighter_equipment_1:0 "Fokker D.XXI"
@@ -358,7 +358,7 @@
  #ENG_jet_fighter_equipment_2:0 "de Havilland Vampire"
  #ENG_jet_fighter_equipment_2_short:0 "Vampire"
  ENG_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
- ENG_jet_strat_bomber_equipment_1_short:0 "Valiant"
+ ENG_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
  ENG_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
  ENG_tac_bomber_equipment_0_short:0 "Whitley"
  ENG_tac_bomber_equipment_1:0 "Vickers Wellington"
@@ -368,9 +368,9 @@
  ENG_tac_bomber_equipment_3:0 "de Havilland Mosquito B"
  ENG_tac_bomber_equipment_3_short:0 "Mosquito B"
  ENG_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
- ENG_jet_tac_bomber_equipment_1_short:0 "Venom"
+ ENG_jet_tac_bomber_equipment_1_short:0 "Venom (J.B)"
  ENG_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
- ENG_jet_tac_bomber_equipment_2_short:0 "Canberra"
+ ENG_jet_tac_bomber_equipment_2_short:0 "Canberra (J.B)"
 
  
  ENG_nav_bomber_equipment_1:0 "Fairey Swordfish"
@@ -588,11 +588,13 @@
  NZL_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
  SAF_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
  RAJ_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
- CAN_jet_strat_bomber_equipment_1_short:0 "Valiant"
- AST_jet_strat_bomber_equipment_1_short:0 "Valiant"
- NZL_jet_strat_bomber_equipment_1_short:0 "Valiant"
- SAF_jet_strat_bomber_equipment_1_short:0 "Valiant"
- RAJ_jet_strat_bomber_equipment_1_short:0 "Valiant"
+ EGY_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
+ CAN_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
+ AST_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
+ NZL_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
+ SAF_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
+ RAJ_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
+ EGY_jet_strat_bomber_equipment_1_short:0 "Valiant (Hv.J.B)"
  CAN_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
  AST_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
  NZL_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
@@ -638,21 +640,25 @@
  NZL_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
  SAF_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
  RAJ_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
+ EGY_jet_tac_bomber_equipment_1:0 "de Havilland Venom"
  CAN_jet_tac_bomber_equipment_1_short:0 "Venom"
  AST_jet_tac_bomber_equipment_1_short:0 "Venom"
  NZL_jet_tac_bomber_equipment_1_short:0 "Venom"
  SAF_jet_tac_bomber_equipment_1_short:0 "Venom"
  RAJ_jet_tac_bomber_equipment_1_short:0 "Venom"
+ EGY_jet_tac_bomber_equipment_1_short:0 "Venom"
  CAN_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
  AST_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
  NZL_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
  SAF_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
  RAJ_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
+ EGY_jet_tac_bomber_equipment_2:0 "English Electric Canberra"
  CAN_jet_tac_bomber_equipment_2_short:0 "Canberra"
  AST_jet_tac_bomber_equipment_2_short:0 "Canberra"
  NZL_jet_tac_bomber_equipment_2_short:0 "Canberra"
  SAF_jet_tac_bomber_equipment_2_short:0 "Canberra"
  RAJ_jet_tac_bomber_equipment_2_short:0 "Canberra"
+ EGY_jet_tac_bomber_equipment_2_short:0 "Canberra"
  CAN_CAS_equipment_1:0 "Hawker Hector"
  NZL_CAS_equipment_1:0 "Hawker Hector"
  SAF_CAS_equipment_1:0 "Hawker Hector"
