--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6553,9 +6553,9 @@
  
  #Japanese heavy Jet Bomber#
  tech_JAP_jet_strat_bomber_equipment_1:0 "Kawasaki K-200 Heavy Jet Bomber"
- jp_jet_strat_bomber_equipment_1:0 "Kawasaki K-200 Heavy Jet Bomber"
- jp_jet_strat_bomber_equipment_1_short:0 "Ki-200 (Hv.J.B)"
- jp_jet_strat_bomber_equipment_1_desc: "A heavy jet engined strategic bomber based on an early idea of a large flying boat."
+ jet_strat_bomber_equipment_1:0 "Kawasaki K-200 Heavy Jet Bomber"
+ jet_strat_bomber_equipment_1_short:0 "Ki-200 (Hv.J.B)"
+ jet_strat_bomber_equipment_1_desc: "A heavy jet engined strategic bomber based on an early idea of a large flying boat."
  
  #japanese light jet bomber#
  tech_JAP_jet_light_bomber_equipment_1:0 "R2Y2 V1 Light Jet Bomber"
@@ -8159,17 +8159,9 @@
  us_heavy_bomber_equipment_3_a_short:0 "B-17 F (Hv.B)"
  us_heavy_bomber_equipment_3_a_desc:0 "The B-17F was an upgrade of the B-17E. Late production "F" series aircraft received substantially enlarged mounts for the "cheek"-mounted guns, and fully feathering paddle-bladed propellers. Numerous internal changes were made to improve the effectiveness, range, and load capacity of the B-17. In combat the B-17F proved almost immediately to have inadequate defensive protection when attacked from the front. Various armament configurations of two to four flexible guns were improvised, but the problem was finally addressed with the powered, Bendix remotely operated "chin" turret in the final production blocks of the F-series. A stronger undercarriage and Wright R-1820-9 Cyclone engines made a increase of the maximum bomb capacity to 3,600 kg possible. Range was extended by approximately 1400 km with the installation in mid-production of additional fuel cells in the wings."
  
- us_heavy_bomber_equipment_3_b:0 "Boeing XB-39 'Super Fortress' Heavy Bomber"
- us_heavy_bomber_equipment_3_b_short:0 "XB-39 (Hv.B)"
- us_heavy_bomber_equipment_3_b_desc:0 "The Boeing XB-39 Superfortress was a United States prototype bomber aircraft, a single example of the B-29 Superfortress converted to fly with alternative powerplants. It was intended to demonstrate that the B-29 could still be put into service even if the first choice of engine, the air-cooled Wright R-3350 radial engine, ran into development or production difficulties. The first flight of the B-39 was made in December. The initial flight tests of the B-39, without turbosuperchargers installed, were impressive. However, the B-39 program was by now seriously delayed, and the flawed R-3350 B-29s had already been rushed into combat in June 1944.  The four Allison V-3420-11 liquid-cooled W24 engines developing 2100 HP allowed a maximum airspeed of 648 km/h. Its armament were ten 12.7 mm M2 machine guns in remote or manual turrets, a 20 mm M2 cannon in tail and up to 9,000 kg of bombs internally."
- 
  us_heavy_bomber_equipment_3_c:0 "Consolidated B-24 H 'Liberator' Heavy Bomber"
  us_heavy_bomber_equipment_3_c_short:0 "B-24 H (Hv.B)"
  us_heavy_bomber_equipment_3_c_desc:0 "Because of obvious vulnerability of the B-24 to head-on attack with the earlier, 24-panel "greenhouse" nose glazing, the B-24H design incorporated an electrically powered Emerson A-15 nose turret above the bombardier's position. Approximately 50 other airframe changes were made, including a redesigned bombardier compartment possessing a glazed three-panel bombsight window unit replacing the "greenhouse" nose design. The tail turret was given larger windows for better visibility and the Martin A-3 dorsal turret received an enlarged "high hat" dome. The waist gunner positions were enclosed with Plexiglas windows and laterally offset to reduce mutual interference between the two waist gunners during battle. The maximum airspeed reached was 478 km/h."
- 
- us_heavy_bomber_equipment_4_a:0 "Boeing XB-38 'Flying Fortress' Heavy Bomber"
- us_heavy_bomber_equipment_4_a_short:0 "XB-38 (Hv.B)"
- us_heavy_bomber_equipment_4_a_desc:0 "The XB-38 Flying Fortress was an attempt to re-engine a B-17E Flying Fortress, to test whether the Allison V-1710 V liquid-cooled engine with 1425 HP could be substituted for the standard Wright R-1820 radial engine. It was meant as an improved version of the B-17, and a variant that could be used if air-cooled Wright R-1820 radial engines became scarce. Completing the modifications took less than a year, and the XB-38 made its first flight in May 1943. While the XB-38 delivered a substantially higher top speed (526 km/h), its service ceiling was lower. Its armament was to be ten 12,7mm machine guns and up to 2700 kg of bombs. Since the Allison engines were needed by several fighter models the B-38 would have to compete with them, and if air superiority was not achieved the bomber production would not receive priority."
  
  us_heavy_bomber_equipment_4_b:0 "Boeing B-50 'Super Fortress' Heavy Bomber"
  us_heavy_bomber_equipment_4_b_short:0 "B-50 (Hv.B)"
@@ -8178,6 +8170,9 @@
  us_heavy_bomber_equipment_4_c:0 "Consolidated B-32 'Dominator' Heavy Bomber"
  us_heavy_bomber_equipment_4_c_short:0 "B-32 (Hv.B)"
  us_heavy_bomber_equipment_4_c_desc:0 "The Consolidated B-32 Dominator (Consolidated Model 34) was a quad-engined heavy strategic bomber built for United States Army Air Forces. It was developed by Consolidated Aircraft in parallel with the Boeing B-29 Superfortress as a fallback design should the B-29 prove unsuccessful. The Model 33 on which Consolidated based its proposal was similar to the B-24 Liberator. Like the B-24 it was originally designed with a twin tail and a large Davis wing, but with a longer, rounder fuselage and a rounded nose. The powerplants were to be the same quartet 2,200 HP Wright Duplex-Cyclones allowing a maximum airspeed of 575 km/h. The prototypes received an odd mix of machine guns and had problems with the powered turrets, so the  production models had ten manually operated 12,7mm machine guns in turrets. Its payload was up to 9100 kg of bombs."
+ 
+ USA_jet_strat_bomber_equipment_1:0 "Boeing B-47 'Stratojet' Heavy Jet Bomber"
+ USA_jet_strat_bomber_equipment_1_short:0 "B-47 (Hv.J.B)"
  
  # USA Flying Boat #
  USA_flying_boat_equipment_1:0 "Consolidated PBY-1 'Catalina' Flying-Boat"
