--- a/bicemodded/localisation/english/dod_focus_l_english.yml
+++ b/bicemodded/localisation/english/dod_focus_l_english.yml
@@ -261,6 +261,8 @@
  ROM_join_axis_desc:0 "The time has come to join the Axis, so that we may carve out a glorious Romanian future alongside the Germans."
  ROM_demand_transnistria:0 "Demand Transnistria"
  ROM_demand_transnistria_desc:0 "Now that we are strong and have German backing, the time has come to demand the region of Transnistria, incorporating it into Greater Romania."
+ ROM_demand_vojvodina:0 "Balkan Claims"
+ ROM_demand_vojvodina_desc:0 "Now that we are strong and have German backing, the time has come to demand the region of Vojvodina, incorporating it into Greater Romania."
  ROM_renew_the_romanian_polish_alliance:1 "Renew Romanian-Polish Alliance"
  ROM_renew_the_romanian_polish_alliance_desc:0 "Our old ties with Poland have cooled in recent years. As the threats surrounding us have not diminished, and the global political situation grows ever more tumultuous, the time has come to revive our alliance with our northern neighbour."
  ROM_the_cordon_sanitaire:0 "The Cordon Sanitaire"
@@ -396,10 +398,11 @@
  ROM_reserve_divisions:0 "Reserve Divisions"
  ROM_reserve_divisions_desc:0 "Romania is a small nation, and we must allocate appropriate numbers to reserve divisions if our army is to have any staying power in the field."
  ROM_royal_guards_divisions:0 "Royal Guards Divisions"
- ROM_royal_guards_divisions_tt:0 "Gain a seasoned division with §Y9 Infantry§! and §Y2 Artillery§! battalions.\n"
+ ROM_royal_guards_divisions_tt:0 "Gain a seasoned infantry division with §Y9 Infantry§! and §Y2 Artillery§! battalions.\n"
+ ROM_royal_guards_divisions_2_tt:0 "Gain a seasoned cavalry division with §Y7 Cavalry§! and §Y2 Pack Artillery§! battalions.\n"
  ROM_royal_guards_divisions_desc:0 "Our Royal Guards must be expanded, as appropriate for our great King."
  ROM_the_armored_division:0 "The Armored Division"
- ROM_the_armored_division_tt:0 "Gain a unit with §Y4 Medium Armor§! and §Y4 Motorized§! battalions.\n"
+ ROM_the_armored_division_tt:0 "Gain a seasoned armor division with §Y4 Tank§!, §Y4 Motorized§! and §Y2 Artillery§! battalions.\n"
  ROM_the_armored_division_desc:0 "Tanks are the way forward, and we must establish dedicated divisions that utilize the strengths of these new weapons."
  ROM_acquire_modern_tanks:0 "Acquire Modern Tanks"
  ROM_acquire_modern_tanks_desc:0 "The development of tanks continues at a rapid pace, and it will not do to acquire obsolete models."
