--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -1830,6 +1830,11 @@
  ROM_iuliu_maniu:0 "Iuliu Maniu"
  #ROM_generic_communist_revolutionary:0 "Gheorghe Gheorghiu-Dej"
  ROM_gheorghe_gheorghiu_dej:0 "Gheorghe Gheorghiu-Dej"
+ ROM_eugeniu_rosca:0 "Eugeniu Rosca"
+ ROM_ilie_steflea:0 "Ilie Steflea"
+ ROM_stefan_ionescu:0 "Stefan Ionescu"
+ ROM_mircea_eliade:0 "Mircea Eliade"
+ ROM_horia_sima:0 "Horia Sima"
  FIN_generic_fascist_demagogue:0 "Bruno Salmiala"
  FIN_generic_democratic_reformer:0 "Onni A. Hiltunen"
  FIN_generic_communist_revolutionary:0 "Otto Ville Kuusinen"
