romainia general bugfixes

--- a/bicemodded/localisation/english/dod_focus_l_english.yml
+++ b/bicemodded/localisation/english/dod_focus_l_english.yml
@@ -297,6 +297,10 @@
  ROM_expand_the_university_of_bucharest_desc:0 "By improving the quality and capacity of our university, we can increase the pool of best and brightest that we rely on for our technological advances."
  ROM_exploit_the_baita_mines:0 "Exploit the Baita Mines"
  ROM_exploit_the_baita_mines_desc:0 "It is beginning to become clear that uranium is of vital importance to some of the most drastic technological advances in weaponry since the invention of the firearm. We are lucky enough to have a large deposit of the stuff within our borders, and we should set up a mine to exploit it."
+ ROM_cugir_focus:0 "Cugir Expansion"
+ ROM_cugir_focus_desc:0 "The arms manufacturing workshops were founded in Cugir, Transylvania. Now we can expand the facilities with new production halls to ramp up production of small arms."
+ ROM_mining_focus:0 "Oltenian Mines"
+ ROM_mining_focus_desc:0 "We need to expand the mining operations in the Oltenia region."
  ROM_balkans_dominance:0 "Balkans Dominance"
  ROM_balkans_dominance_desc:0 "The key to a prosperous Romanian future lies not with the revolutionaries of the East, or the democracies or fascists of the West, but with Romanian dominance of the balkans."
  ROM_puppet_bulgaria:0 "Puppet Bulgaria"
