german ai tweaks

--- a/bicemodded/localisation/english/lar_focus_l_english.yml
+++ b/bicemodded/localisation/english/lar_focus_l_english.yml
@@ -558,7 +558,7 @@
  SPR_ensure_loyalty_desc:1 "The government has been betrayed most brutally by its military. The first step to mending this wound is ensuring loyalty of all officers we henceforth appoint."
  SPR_enlist_the_carabineros:0 "Enlist the Carabineros"
  SPR_enlist_the_carabineros_desc:2 "As a stop-gap measure to man the frontlines we must turn to unorthodox solutions. Without a military, the Carabineros, a paramilitary frontier guard and customs force, will serve as as good a force as any to man the trenches."
- SPR_enlist_the_carabineros_tt:0 "Gain 1 unit with §Y3 Infantry§! battalions in 5 random states.\n"
+ SPR_enlist_the_carabineros_tt:0 "Gain a §YLight Infantry§! brigade in 4 random states.\n"
  SPR_the_popular_army:0 "The Popular Army"
  SPR_the_popular_army_desc:1 "Our new army will be made up of those untainted by the treachery of the military; those among the population who are zealous in their defense of the principles upon which the Republic is built, but who perhaps did not serve previously. Coupled with this reorganization we will also develop new arms and doctrines to aid this new army in their fight."
  SPR_take_the_initiative:0 "Take the Initiative"
